@@ -1,3 +1,13 @@
+Tue Aug  3 18:24:17 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/Config_Handlers/XML_File_Intf.cpp:
+
+          Better error messages when parsing fails.
+
+        * DAnCE/Config_Handlers/XSCRT/Traversal.hpp:
+
+          Compile error in clang.
+
 Tue Aug  3 12:12:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/etc/DAnCE.doxygen:
